Updated the site colors and fixed alignment issues

--- a/src/app/components/company/services/services.component.css
+++ b/src/app/components/company/services/services.component.css
@@ -31,7 +31,7 @@ h1 {
   background: #eff2f7;
 }
 .about-services {
-  border-left: 2px solid #14b1bb;
+  border-left: 2px solid #0a61c8;
   filter: drop-shadow(3px 3px 3px #d1d1d1);
   background: #fff;
   padding: 20px;
@@ -41,24 +41,26 @@ h1 {
   height: 90%;
 }
 .about-services:hover {
-  filter: drop-shadow(3px 3px 3px #14b1bb);
+  filter: drop-shadow(3px 3px 3px #b3d1f5);
 }
 .more-btn {
-  background: #14b1bb;
+  background: #b3d1f5;
   border-radius: 15px;
-  color: #fff;
+  color: #0a61c8;
   padding: 15px;
   margin: 20px;
   font-size: 20px;
 }
 .btn {
-  color: #14b1bb;
-  background-color: #f2f3f8;
-  border-color: #14b1bb;
+  color: #0a61c8;
+  background-color: #b3d1f5;
+  border-color: #0a61c8;
   text-transform: uppercase;
   padding: 15px 30px;
   margin-top: 10px 0;
   width: 100%;
+  font-size:18px;
+  font-weight:bold;
 }
 .btn::before {
   z-index: -1;
@@ -68,12 +70,12 @@ h1 {
 }
 .btn:hover {
   color: #fff;
-  background-color: #14b1bb;
-  border-color: #14b1bb;
+  background-color: #0a61c8;
+  border-color: #0a61c8;
 }
 h1 {
   font-size: 30px;
-  color: #00285d;
+  color: #0a61c8;
   text-align: center;
   font-weight: 700;
   margin-bottom: 20px;
