--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,9 @@
 .textCenter {
   text-align: center !important;
 }
-
+i{
+width:25px;
+}
 .width100 {
   width: 100% !important;
 }
@@ -45,14 +47,11 @@
 .dx-icon-trash::before {
   color: #14b1bb;
 }
-h3,
-h5,
-.main-heading {
-  color: #14b1bb;
-  font-size: 30px;
+h3, h4, h5, .main-heading {
+  color: #0a61c8;
+  font-size: 30px !important;
   text-align: center;
-  line-height: 70px;
-  font-weight: bold;
+  font-weight: bold !important;
   display: block;
   white-space: nowrap;
 }
@@ -69,6 +68,9 @@ h1 {
 .industries {
   background-color: #f9f7f8;
   padding: 10px 0 50px 0;
+}
+.industries a{
+  text-decoration: none;
 }
 .industries-content {
   position: relative;
@@ -170,4 +172,35 @@ h1 {
   text-align: center;
   font-weight: 700;
   margin-bottom: 20px;
+}
+.right-align-content{
+  text-align: right;
+}
+.sec-heading{
+  color:#fa8936;
+  font-size:20px !important;
+  line-height: 22px;
+}
+.c-btn {
+  color: #0a61c8 !important;
+  background-color: #b3d1f5 !important;
+  border: 1px solid #0a61c8;
+  text-transform: uppercase;
+  padding: 15px 30px;
+  margin-top: 10px 0;
+  width: 100%;
+  font-size:18px;
+  font-weight:bold;
+}
+.c-btn::before {
+  z-index: -1;
+  opacity: 0;
+  transform: scale3d(0.7, 1, 1);
+  transition: transform 0.42s, opacity 0.42s;
+}
+
+.c-btn:hover {
+  color: #fff;
+  background-color: #0a61c8;
+  border-color: #0a61c8;
 }
